# onemem

./: .editorconfig  .gitignore  .mise.toml  AGENTS.md  BUILD_SEQUENCE.md  CLAUDE.md  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  tsconfig.base.json  turbo.json
.agents/plugins/: README.md  marketplace.json
.changeset/: README.md  config.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  deploy-contract.yml  deploy-walrus-sites.yml  release.yml
.thoughts/: SALVAGE-2026-06-19.md
.thoughts/design/: 2026-06-18-one-mem-campaign-designer-brief.md  2026-06-18-onemem-emotional-video-brief.md  2026-06-18-onemem-launch-mode-video-spec.md  2026-06-18-social-brand-kit-prompt.md  2026-06-19-onemem-30s-reel-designer-brief.md  2026-06-19-onemem-30s-reel-sound-libraries.md
.thoughts/goals/: 2026-06-19-onemem-build-goal.md
.thoughts/handoffs/: 2026-06-19-local-handoff-to-claude-code.md  2026-06-19-onemem-codex-handoff.md  2026-06-19-onemem-launch-sound-claude.md
.thoughts/plans/: 2026-06-17-cli-command-surface-refresh.md  2026-06-17-cli-credentials-fallback.md  (+67 more)
config/: networks.json  networks.schema.json
docs/: INDEX.md  README.md
scripts/: bootstrap-dev.sh  check-registry-status.py  check-release-preflight.py  codegen-move-python.py  codegen-move-types.ts  deploy-contract.sh  deploy-walrus-sites.sh  get-wal.ts  install-lefthook-if-git.mjs  migrate-contract.sh  publish-all.sh  sdk-smoke-testnet.ts  setup-memwal.mts  verify-mainnet.sh
tests/: structure.test.ts
(+604 files in other folders)
