[project]
name = "onemem-monorepo"
version = "0.0.0"
description = "OneMem Python workspace root (no installable package; workspace coordinator only)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/sdk-python",
    "packages/cli-python",
    "packages/plugin-hermes",
    "packages/provider-crewai",
    "packages/provider-livekit",
    "packages/provider-elevenlabs",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
]
